--- a/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp.csproj
@@ -18,9 +18,9 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>FaceSentimentAnalysisTestApp_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <PackageCertificateThumbprint>884BB1191F361EE13FD357E131CCFC7C1C6BD0B7</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>73DA9ADFB3EE57D854B8E024F49027E72E15481F</PackageCertificateThumbprint>
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
-    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x64</AppxBundlePlatforms>
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
@@ -137,13 +137,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Contoso.FaceSentimentAnalyzer_CS">
-      <Version>0.0.0.4</Version>
+      <Version>0.0.0.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.3</Version>
+      <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>5.1.0</Version>
+      <Version>5.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
