--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_cpp/packages.config
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_cpp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Contoso.FaceSentimentAnalyzer_CPP" version="0.0.0.6" targetFramework="native" />
   <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.15" targetFramework="native" />
+  <package id="Microsoft.VCRTForwarders.140" version="1.0.0-rc" targetFramework="native" />
 </packages>
