--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_winrtcpp/FaceSentimentAnalysisConsole_winrtcpp.vcxproj
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_winrtcpp/FaceSentimentAnalysisConsole_winrtcpp.vcxproj
@@ -312,6 +312,7 @@
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.15\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets" Condition="Exists('..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.15\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets')" />
     <Import Project="..\packages\Contoso.FaceSentimentAnalyzer_CPP.0.0.0.6\build\native\Contoso.FaceSentimentAnalyzer_CPP.targets" Condition="Exists('..\packages\Contoso.FaceSentimentAnalyzer_CPP.0.0.0.6\build\native\Contoso.FaceSentimentAnalyzer_CPP.targets')" />
+    <Import Project="..\packages\Microsoft.VCRTForwarders.140.1.0.0-rc\build\native\Microsoft.VCRTForwarders.140.targets" Condition="Exists('..\packages\Microsoft.VCRTForwarders.140.1.0.0-rc\build\native\Microsoft.VCRTForwarders.140.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -319,5 +320,6 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.15\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.15\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets'))" />
     <Error Condition="!Exists('..\packages\Contoso.FaceSentimentAnalyzer_CPP.0.0.0.6\build\native\Contoso.FaceSentimentAnalyzer_CPP.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Contoso.FaceSentimentAnalyzer_CPP.0.0.0.6\build\native\Contoso.FaceSentimentAnalyzer_CPP.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.VCRTForwarders.140.1.0.0-rc\build\native\Microsoft.VCRTForwarders.140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.VCRTForwarders.140.1.0.0-rc\build\native\Microsoft.VCRTForwarders.140.targets'))" />
   </Target>
 </Project>
