--- a/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisConsole/FaceSentimentAnalysisConsole.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisConsole/FaceSentimentAnalysisConsole.csproj
@@ -4,12 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Contoso.FaceSentimentAnalyzer_CPP" Version="0.0.0.6" />
-    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview" Version="0.5.2.13" />
+    <PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.0-rc" />
   </ItemGroup>
 
   <ItemGroup>
