--- a/samples/SentimentAnalyzerCustomSkill/cs/Apps/FaceSentimentAnalysisApp_UWP/FaceSentimentAnalysisApp_UWP.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/Apps/FaceSentimentAnalysisApp_UWP/FaceSentimentAnalysisApp_UWP.csproj
@@ -144,6 +144,9 @@
     <PackageReference Include="Contoso.FaceSentimentAnalyzer_CPP">
       <Version>0.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AI.Skills.SkillInterface">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
