--- a/samples/ConceptTagger/cs/ConceptTaggerSample_NetCore3/ConceptTaggerSample_NetCore3.csproj
+++ b/samples/ConceptTagger/cs/ConceptTaggerSample_NetCore3/ConceptTaggerSample_NetCore3.csproj
@@ -8,13 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview" Version="0.6.0.0" />
-    <PackageReference Include="Microsoft.AI.Skills.Vision.ConceptTaggerPreview" Version="0.1.0.1" />
-	<PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.0-rc" />
+    <PackageReference Include="Microsoft.AI.Skills.SkillInterface" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AI.Skills.Vision.ConceptTagger" Version="1.0.0" />
+	<PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2002-preview" />
+    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
   </ItemGroup>
 
 </Project>
