--- a/samples/ObjectDetector/cpp/ObjectDetectorSample_Desktop/packages.config
+++ b/samples/ObjectDetector/cpp/ObjectDetectorSample_Desktop/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.6.0" targetFramework="native" />
-  <package id="Microsoft.AI.Skills.Vision.ObjectDetectorPreview" version="0.1.0.4" targetFramework="native" />
-  <package id="Microsoft.VCRTForwarders.140" version="1.0.0-rc" targetFramework="native" />
-  <package id="Microsoft.Windows.CppWinRT" version="2.0.190730.2" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterface" version="1.0.0" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.Vision.ObjectDetector" version="1.0.0" targetFramework="native" />
+  <package id="Microsoft.VCRTForwarders.140" version="1.0.6" targetFramework="native" />
+  <package id="Microsoft.Windows.CppWinRT" version="2.0.200316.3" targetFramework="native" />
 </packages>
