--- a/samples/ObjectDetector/cs/ObjectDetectorSample_NetCore3/ObjectDetectorSample_NetCore3.csproj
+++ b/samples/ObjectDetector/cs/ObjectDetectorSample_NetCore3/ObjectDetectorSample_NetCore3.csproj
@@ -12,10 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview" Version="0.6.0" />
-    <PackageReference Include="Microsoft.AI.Skills.Vision.ObjectDetectorPreview" Version="0.1.0.4" />
-    <PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.0-rc" />
-    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2002-preview" />
+    <PackageReference Include="Microsoft.AI.Skills.Vision.ObjectDetector" Version="1.0.0" />
+    <PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
+    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
   </ItemGroup>
 
 </Project>
