--- a/samples/ObjectTracker/cs/ObjectTrackerSample_UWP/ObjectTrackerSample_UWP.csproj
+++ b/samples/ObjectTracker/cs/ObjectTrackerSample_UWP/ObjectTrackerSample_UWP.csproj
@@ -188,14 +188,14 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.Vision.ObjectTrackerPreview">
-      <Version>0.0.0.3</Version>
+    <PackageReference Include="Microsoft.AI.Skills.Vision.ObjectTracker">
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.8</Version>
+      <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>5.1.1</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
