--- a/samples/SkeletalDetector/cs/SkeletalDetectorSample_NetCore3/SkeletalDetectorSample_NetCore3.csproj
+++ b/samples/SkeletalDetector/cs/SkeletalDetectorSample_NetCore3/SkeletalDetectorSample_NetCore3.csproj
@@ -12,13 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview" Version="0.6.0" />
-    <PackageReference Include="Microsoft.AI.Skills.Vision.SkeletalDetectorPreview" Version="0.1.0.4" />
-	<PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.0-rc" />
+	<PackageReference Include="Microsoft.AI.Skills.Vision.SkeletalDetector" Version="1.0.0" />
+	<PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2002-preview" />
+    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
   </ItemGroup>
 
 </Project>
